# qwen-asr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  asr_regression.py  main.c  qwen_asr.c  qwen_asr.h
examples/: stream_client.py
examples/bench/: Makefile.mk  README.md  bench.c
examples/server/: CMakeLists.txt  Makefile.mk  README.md  bench.js  server.cpp
server/: requirements.txt  stream_server.py
